--- a/config.toml
+++ b/config.toml
@@ -20,21 +20,25 @@ paginate=7
 email = 'wzy816@gmail.com'
 name = 'wzy816'
 	
-
 [[menu.main]]
 name = "Posts"
 url = "/posts"
 weight = 1
 
 [[menu.main]]
-name = "RSS"
-url = "/index.xml"
-weight = 2
+name = "Tags"
+url = "/tags"
+weight = 3
 
 # [[menu.main]]
 # name = "Github"
 # url = "https://github.com/wzy816"
 # weight = 3
+
+[[menu.main]]
+name = "RSS"
+url = "/index.xml"
+weight = 4
 
 [frontmatter]
 lastmod = ["lastmod"]
